# locomo-audit

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: methodology-challenge.md
.github/workflows/: ci.yml
data/: LICENSES.md  README.md  REDACTION.md  SYNTHETIC_GENERATION.md
data/samples/locomo_sample/T1/: loco-t1-0001.json  loco-t1-0002.json  loco-t1-0003.json  loco-t1-0004.json
data/samples/locomo_sample/T2/: loco-t2-0001.json  loco-t2-0002.json
data/samples/locomo_sample/T4/: loco-t4-0001.json
data/samples/longmemeval_sample/T1/: lme-t1-0001.json  lme-t1-0002.json  (+1 more)
data/synthetic/personas/: persona-001.json  persona-002.json  persona-003.json
eval/: answer_gen.py  judge.py  metrics.py  runner.py  sweep.py
eval/configs/: generation.yaml  pricing.yaml
eval/datasets/: README_locomo.md  __init__.py  convert_locomo.py  loaders.py
eval/judge-prompts/: README.md  t2_claim_entailment.md
eval/prompts/: README.md  answer_concise.txt  answer_verbose.txt  judge_cot_rubric.txt  judge_lenient.txt  judge_strict.txt
paper/: locomo-audit-draft.md
results/: README.md
results/pilot_p01/: manifest.json
results/pilot_p01_letta/: manifest.json
results/pilot_p01_mem0/: manifest.json
results/pilot_p01_zep/: manifest.json
results/stage2_rejudge/: summary.json
results/sweep/: stage1.json  swing.csv
systems/: _registry.py  base.py  bm25.py  letta_adapter.py  longcontext.py  mem0_adapter.py  tfidf_rag.py  zep_adapter.py
tests/: test_metrics.py  test_metrics_v01.py  test_runner.py  test_sweep.py
(+28 files in other folders)
