[project]
name = "personalmem"
version = "0.0.1"
description = "An independent, reproducible evaluation harness for LLM memory systems — and a forensic audit of the LoCoMo benchmark dispute."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "PersonalMem Project" }]
keywords = ["benchmark", "llm", "memory", "rag", "personal-ai"]

# Core deps only. Each evaluated system pins its own deps in systems/<name>/requirements.txt
# to keep baseline environments isolated and reproducible.
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "python-dateutil>=2.9",  # date_within_tolerance (T1/T6)
    "scikit-learn>=1.4",     # StyleClassifier (T3) + tfidf_rag TF-IDF retriever
    "rapidfuzz>=3.6",        # selective_surfacing fuzzy alias match (T8)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Pragmatic ignores for a research/harness codebase: long descriptive strings and
# a couple of stylistic bugbear nits are not worth churning working, tested code.
ignore = ["E501", "B007", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval", "systems"]
